src/test/resources/amyc/nameAnalyzer/passing/DefOrder.amy
object DefOrder
  fn bar(): Foo = { foo() }
  fn foo(): Foo = { Bar(42) }
  case class Bar(i: Int(32)) extends Foo
  abstract class Foo
end DefOrder
