src/test/resources/amyc/nameAnalyzer/failing/UndefinedType.amy
object UndefinedType
  fn foo(): SomeType = { 42 }
end UndefinedType
